<resources>
    <string name="app_name">Lorentz Factor</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="heading2">TextView</string>
    <string name="display_output">TextView</string>
    <string name="calc">CALCULATE</string>
    <string name="heading">Lorentz Factor Calculator</string>
    <string name="display_op">The lorentz Factor is:</string>
    <string name="entervalue">Enter speed of the moving observer:</string>
    <string name="answer_output">0</string>
    <string name="spi_factor">SPI FACTOR</string>
    <string name="heading_spi">SPI FACTOR</string>
    <string name="display_spi">Button</string>
    <string name="display_spi_factor">Display Spi Factor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorentz_factor">Lorentz Factor</string>
    <string name="go_to_home">go_to _home</string>
    <string name="back_to_home">back_to_home</string>
    <string name="back_to_lf">"Back "</string>
    <string name="back_TO_LF">BACK</string>
    <string name="home">HOME</string>
    <string name="go_to_spi_factor">SPI FACTOR</string>
    <string name="predictions">Predictions</string>
    <string name="heading_pred">Heading to be entered</string>
    <string name="lorentz_factor_pred">Lorentz Factor</string>
    <string name="velocity_pred">Speeds of the moving observer</string>
    <string name="table_heading">Table Heading</string>
    <string name="textview_lf">Enter Lorentz Factor</string>
    <string name="textview_vel">Enter Velocity</string>
    <string name="enter_speed">Enter Speed of the moving observer</string>
    <string name="enter_speed_of_observer">Enter speed of observer</string>
    <string name="save">SAVE</string>
    <string name="home_LF">HOME</string>
</resources>