<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <TextView
        android:id="@+id/heading_predictions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_pred"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/enter_lf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/table_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/table_heading"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/table_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_vel" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/back_to_lf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_heading">

        <TableRow
            android:id="@+id/table_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/velocity_pred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/velocity_pred"
                android:textColor="#000" />

            <TextView
                android:id="@+id/lorentz_factor_pred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/lorentz_factor_pred"
                android:textColor="#000" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dip"
            android:background="#ff0000" />
    </TableLayout>

    <Button
        android:id="@+id/back_to_lf"
        android:layout_width="122dp"
        android:layout_height="45dp"
        android:text="@string/back_to_lf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_layout" />

    <TextView
        android:id="@+id/tv_lf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_lf"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_vel"
        app:layout_constraintEnd_toStartOf="@id/enter_lf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_predictions" />

    <EditText
        android:id="@+id/enter_lf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="0"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/enter_vel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_lf"
        app:layout_constraintTop_toBottomOf="@id/heading_predictions" />

    <TextView
        android:id="@+id/tv_vel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_speed_of_observer"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/table_heading"
        app:layout_constraintEnd_toStartOf="@+id/enter_vel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lf" />

    <EditText
        android:id="@+id/enter_vel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="0"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/table_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_vel"
        app:layout_constraintTop_toBottomOf="@+id/enter_lf" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@id/table_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_vel" />

</androidx.constraintlayout.widget.ConstraintLayout>

