<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#84FFFF"
    tools:context=".FragmentHome">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/heading_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textColor="#FA0505"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/go_to_spi_factor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_to_Lorentz_Factor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorentz_factor"
        app:backgroundTint="#FF9E80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_home" />

    <Button
        android:id="@+id/go_to_spi_factor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_spi_factor"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#8C2121"
        app:backgroundTint="#FFD180"
        app:layout_constraintBottom_toTopOf="@+id/go_to_Lorentz_Factor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_home" />

</androidx.constraintlayout.widget.ConstraintLayout>