<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/heading_spi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_spi"
        android:textColor="#673AB7"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spi_factor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spi_factor"
        android:layout_width="240dp"
        android:layout_height="88dp"
        android:gravity="center"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/display_spi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading_spi" />

    <Button
        android:id="@+id/button_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_spi" />

    <Button
        android:id="@+id/display_spi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_spi_factor"
        app:layout_constraintBottom_toTopOf="@id/button_prev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spi_factor" />

</androidx.constraintlayout.widget.ConstraintLayout>